# blaze

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile  README.md  TODO.md  build.rs
.github/workflows/: book.yml  makefile.yml  pages.yml
blase/: .gitignore  Cargo.toml  Makefile  TODO.md  bench_sort.csv  sum_bench.csv
blase/benches/sum/: sum_bench.csv  sum_bench_f32.csv  sum_bench_f64.csv  sum_bench_u32.csv  sum_bench_u32_ext.csv
blase/src/: ctx.rs  lib.rs  trait.rs  utils.rs  vec.rs
blase/src/opencl/: atomic.cl  blast_dot.cl  blast_sum.cl  random.cl  sort.cl  vec.cl
blase/src/random/: cpu.rs  mod.rs
blase/src/vec/: arith.rs  cmp.rs  dot.rs  mod.rs  ord.rs  sort.rs  sum.rs  utils.rs
blase/src/vec/arith/: add.rs  div.rs  mod.rs  mul.rs  sub.rs
blase/tests/: sort.rs  sum_bench.rs  vec.rs
blaze-proc/: Cargo.toml
blaze-proc/src/: context.rs  error.rs  lib.rs  num.rs  utils.rs
blaze-proc/src/cl/: arg.rs  kern.rs  mod.rs  ty.rs
blaze-proc/tests/: arith.cl  op.rs  test.rs
rscl-proc/: Cargo.toml
rscl-proc/src/: context.rs  error.rs  lib.rs  num.rs  utils.rs
rscl-proc/src/cl/: access.rs  arg.rs  compile.rs  kern.rs  kernel.rs  mod.rs  signature.rs  ty.rs  type.rs
rscl-proc/src/cl/parse/: arg.rs  mod.rs  signature.rs  type.rs
rscl-proc/src/cl/parse/expr/: array.rs  assign.rs  call.rs  local.rs  mod.rs  target.rs  utils.rs
rscl-proc/tests/: arith.cl  main.rs  mod.rs  op.rs
src/: lib.rs  thin.rs  thinfn.rs
src/buffer/: access.rs  chunks.rs  complex.rs  flags.rs  manager.rs  map.rs  mod.rs  range.rs  raw.rs  regular.rs  slice.rs
src/buffer/events/: copy.rs  fill.rs  map.rs  mod.rs  read.rs  write.rs
src/buffer/rect/: host.rs  mod.rs  read.rs  write.rs
src/buffer/rect/host/: mod.rs  rows.rs
src/context/: cyclic.rs  flags.rs  global.rs  mod.rs  notify.rs  queue.rs  raw.rs  scope.rs  single.rs
src/context/queue/: count.rs  eventual.rs  mod.rs  supplier.rs
src/core/: device.rs  error.rs  kernel.rs  memobj.rs  mod.rs  pipe.rs  platform.rs  program.rs  queue.rs
src/event/: abort.rs  complex.rs  consumer.rs  eventual.rs  flag.rs  future.rs  info.rs  join.rs  listener.rs  mod.rs  profiling.rs  raw.rs  status.rs  various.rs  wait.rs
src/event/listener/: mod.rs  queue.rs  thread.rs  ty.rs
src/image/: channel.rs  complex.rs  desc.rs  encdec.rs  flags.rs  mod.rs  raw.rs  sampler.rs  slice.rs
src/image/encdec/: alloc.rs  codec.rs  dec.rs  deflate.rs  enc.rs  error.rs  mod.rs  pixel.rs  stream.rs  swr.rs
src/image/encdec_old/: error.rs  format.rs  frame.rs  mod.rs
src/image/endec/: mod.rs
src/image/endec/png/: encode.rs  mod.rs
src/image/events/: copy.rs  fill.rs  map.rs  mod.rs  read.rs  write.rs
src/image/events/map/: mod.rs  view.rs
src/kernel/: build.rs  event.rs  mod.rs  raw.rs
src/memobj/: flags.rs  map.rs  mod.rs  raw.rs  utils.rs
src/memobj/region/: mod.rs  order.rs  slice.rs
src/svm/: atomics.rs  flags.rs  mod.rs  utils.rs
src/utils/: deref.rs  mod.rs  owned.rs
tests/: async.rs  buf.rs  error_probing.rs  gauss.rs  llvmir.spv  main.bc  main.rs  main.spv  mmul.rs  program.rs  rect.rs  rng.cl  rng.rs  spir.rs
