[package]
name = "rscl"
version = "0.1.0"
edition = "2021"

[features]
# OpenCL version
cl1_1 = ["opencl-sys/CL_VERSION_1_1"]
cl1_2 = ["cl1_1", "opencl-sys/CL_VERSION_1_2"]
cl2 = ["cl1_2", "opencl-sys/CL_VERSION_2_0"]
cl2_1 = ["cl2", "opencl-sys/CL_VERSION_2_1"]
cl2_2 = ["cl2_1", "opencl-sys/CL_VERSION_2_2"]
cl3 = ["cl2_2", "opencl-sys/CL_VERSION_3_0"]

# Rscl features
strict = []
half = ["dep:half"]
image = ["dep:image"]
map = []
svm = ["cl2"]
atomics = ["svm"]
futures = ["cl1_1", "dep:futures"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rscl-proc = { path = "rscl-proc", version = "0.1.0" }
opencl-sys = { version = "0.2.1", default-features = false }
futures = { version = "0.3.21", optional = true }
image = { version = "0.24.2", optional = true }
half = { version = "2", optional = true }
bytemuck = "1.10.0"
once_cell = "1.12.0"
parking_lot = "0.12.1"
num-traits = "0.2.15"
num_enum = "0.5.7"
bitflags = "1"
cfg-if = "1"
bitvec = "1"
elor = "1"

[dev-dependencies]
tokio = { version = "1.19.2", features = ["full"] }

[workspace]
members = ["rscl-proc"]