[package]
name = "blaze-rs"
description = "A Rustified OpenCL Experience"
version = "0.0.1"
edition = "2021"
authors = ["Alex Andreba <aandrebafreelancer@gmail.com>"]
license = "MIT"
homepage = "https://blaze-rs.com"
repository = "https://github.com/Aandreba/blaze"
readme = "docs/src/intro.md"
keywords = ["opencl", "rust", "blaze", "gpgpu", "gpu"]
categories = ["api-bindings", "concurrency", "hardware-support", "science", "rust-patterns"]
exclude = [".github", "Makefile", "TODO.md", "CHANGELOG.md"]

[features]
# OpenCL version
cl1_1 = ["opencl-sys/CL_VERSION_1_1"]
cl1_2 = ["cl1_1", "opencl-sys/CL_VERSION_1_2"]
cl2 = ["cl1_2", "opencl-sys/CL_VERSION_2_0"]
cl2_1 = ["cl2", "opencl-sys/CL_VERSION_2_1"]
cl2_2 = ["cl2_1", "opencl-sys/CL_VERSION_2_2"]
cl3 = ["cl2_2", "opencl-sys/CL_VERSION_3_0"]

# Blaze features
strict = []
# half = ["dep:half"]
# image = ["dep:ffmpeg-sys-next"]
svm = ["cl2"]
futures = ["dep:futures", "utils-atomics/futures"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
blaze-proc = { path = "blaze-proc", version = "0.0.1" }
opencl-sys = { version = "0.2.1", default-features = false }
futures = { version = "0.3.21", optional = true }
# ffmpeg-sys-next = { version = "5.0.1", optional = true }
# half = { version = "2", features = ["num-traits", "bytemuck"], optional = true }
box-iter = "0.1.0"
bytemuck = "1.10.0"
bytemuck_derive = "1.1.1"
crossbeam = "0.8.2"
once_cell = "1.13.0"
utils-atomics = "0.2.2"
num-traits = "0.2.15"
num_enum = "0.5.7"
bitflags = "1"
cfg-if = "1"
bitvec = "1"
elor = "1"

[dev-dependencies]
tokio = { version = "1.19.2", features = ["full"] }
rand = "0.8.5"

[workspace]
members = ["blaze-proc"]
