[package]
name = "blase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
half = ["dep:half"]
double = []

[target.'cfg(not(target_os = "macos"))'.features]
default = ["double"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
blaze-rs = { version = "0.0.1", path = "../", features = ["cl1_2"] }
blaze-proc = { version = "0.0.1", path = "../blaze-proc" }
half = { version = "2.1.0", optional = true, features = ["num-traits"] }
once_cell = "1.13.0"
cfg-if = "1"
num-traits = "0.2.15"
bitvec = "1.0.1"
elor = "1.1.3"
namable_closures = "0.2.4"
