[package]
name = "blaze-proc"
version = "0.1.1"
edition = "2021"
description = "Blaze internal/external proc macros"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
proc-macro2 = "1"
quote = "1"
derive-syn-parse = "0.1.5"
elor = "1"
