[package]
name = "rscl-proc"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
proc-macro2 = "1"
quote = "1"
derive-syn-parse = "0.1.5"
elor = "1"

[dev-dependencies]
rscl = { path = "../", features = ["svm"], version = "0.1.0" }